# deskpad

./: .env.example  .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  Dockerfile.dev  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/db/: connection.py
backend/app/db/migrations/: 001_init.sql  002_multi_user.sql  003_auth.sql  004_fix_users_unique_constraint.sql
backend/app/middleware/: logging.py
backend/app/models/: schemas.py
backend/app/routers/: auth.py  github.py  health.py  settings.py  todos.py  users.py
frontend/: Dockerfile  Dockerfile.dev  index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: manifest.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/Auth/: AuthStyles.css  LoginScreen.tsx  ProfileSelectScreen.tsx
frontend/src/components/Calendar/: Calendar.css  CalendarContainer.tsx  MonthView.tsx  WeeklyAgenda.tsx  YearView.tsx
frontend/src/components/Clock/: AnalogClock.tsx  Clock.css  ClockContainer.tsx  DigitalClock.tsx  DigitalClockFaces.tsx
frontend/src/components/DateDisplay/: DateDisplay.css  DateDisplay.tsx
frontend/src/components/Github/: GithubPage.css  GithubPage.tsx
frontend/src/components/Layout/: Layout.css  Layout.tsx  ProfileSwitcher.css  (+3 more)
frontend/src/hooks/: useAuth.tsx  useFullscreen.ts  useLongPress.ts  useSettings.tsx  useTime.ts  useUser.tsx  useWakeLock.ts
frontend/src/types/: index.ts
frontend/src/utils/: calendarUtils.ts  dateUtils.ts
nginx/: Dockerfile  nginx.conf
(+4 files in other folders)
